Archive2/26/67a60ad96d7300/output
main.cpp: In function 'int main()':
main.cpp:29:12: error: expected primary-expression before '{' token
      b = a+{1,2};        // syntax error
            ^
main.cpp:29:12: error: expected ';' before '{' token
main.cpp:33:9: warning: left operand of comma operator has no effect [-Wunused-value]
      {a,b} = {b,a};      // syntax error
         ^
main.cpp:33:10: error: expected ';' before '}' token
      {a,b} = {b,a};      // syntax error
          ^
main.cpp:33:10: warning: right operand of comma operator has no effect [-Wunused-value]
main.cpp:33:12: error: expected primary-expression before '=' token
      {a,b} = {b,a};      // syntax error
            ^
